--- a/nginx/sites/app.conf
+++ b/nginx/sites/app.conf
@@ -4,7 +4,7 @@ server {
 
     server_name app.test;
     set $base /src/app;
-    root $base/public;
+    root $base;
 
     # ssl
     ssl_certificate /etc/nginx/ssl/cert.pem;
